// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should disable transitions 1`] = `
.emotion-0 {
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: column nowrap;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  position: relative;
  width: 250px;
}

.emotion-0>textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: auto;
  line-height: 1.5;
  margin: 0;
  outline: none;
  padding: 0.25em 0.75rem;
  text-align: left;
  width: auto;
}

.emotion-0>textarea::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea:active,
.emotion-0>textarea:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-0>textarea:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-0>textarea[disabled] {
  background: rgba(48,48,48,0.05);
  border-bottom: 2px solid rgba(48,48,48,0.05);
  color: rgba(48,48,48,0.25);
  cursor: not-allowed;
}

.emotion-0 .message {
  font-size: 12px;
  color: #303030;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

<div
  class="emotion-0 denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test6"
    placeholder="Insert something here"
  />
</div>
`;

exports[`TextArea should handle width / height 1`] = `
.emotion-0 {
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: column nowrap;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  position: relative;
  width: 400px;
}

.emotion-0>textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 100px;
  line-height: 1.5;
  margin: 0;
  outline: none;
  padding: 0.25em 0.75rem;
  text-align: left;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  width: auto;
}

.emotion-0>textarea::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea:active,
.emotion-0>textarea:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-0>textarea:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-0>textarea[disabled] {
  background: rgba(48,48,48,0.05);
  border-bottom: 2px solid rgba(48,48,48,0.05);
  color: rgba(48,48,48,0.25);
  cursor: not-allowed;
}

.emotion-0 .message {
  font-size: 12px;
  color: #303030;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

<div
  class="emotion-0 denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test2a"
  />
</div>
`;

exports[`TextArea should render 1`] = `
.emotion-0 {
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: column nowrap;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  position: relative;
  width: 250px;
}

.emotion-0>textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: auto;
  line-height: 1.5;
  margin: 0;
  outline: none;
  padding: 0.25em 0.75rem;
  text-align: left;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  width: auto;
}

.emotion-0>textarea::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea:active,
.emotion-0>textarea:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-0>textarea:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-0>textarea[disabled] {
  background: rgba(48,48,48,0.05);
  border-bottom: 2px solid rgba(48,48,48,0.05);
  color: rgba(48,48,48,0.25);
  cursor: not-allowed;
}

.emotion-0 .message {
  font-size: 12px;
  color: #303030;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

<div
  class="emotion-0 denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test1"
    placeholder="Insert something here"
  />
</div>
`;

exports[`TextArea should render dark theme 1`] = `
.emotion-0 {
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: column nowrap;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  position: relative;
  width: 250px;
}

.emotion-0>textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(242,242,242,0.1);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #fff;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: auto;
  line-height: 1.5;
  margin: 0;
  outline: none;
  padding: 0.25em 0.75rem;
  text-align: left;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  width: auto;
}

.emotion-0>textarea::-webkit-input-placeholder {
  color: rgba(255,255,255,0.2);
}

.emotion-0>textarea::-moz-placeholder {
  color: rgba(255,255,255,0.2);
}

.emotion-0>textarea:-ms-input-placeholder {
  color: rgba(255,255,255,0.2);
}

.emotion-0>textarea::placeholder {
  color: rgba(255,255,255,0.2);
}

.emotion-0>textarea:active,
.emotion-0>textarea:focus {
  background: rgba(242,242,242,0.1);
  border-bottom: 2px solid #3570f4;
  color: #fff;
}

.emotion-0>textarea:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-0>textarea[disabled] {
  background: rgba(255,255,255,0.1);
  border-bottom: 2px solid rgba(255,255,255,0.05);
  color: rgba(255,255,255,0.1);
  cursor: not-allowed;
}

.emotion-0 .message {
  font-size: 12px;
  color: #303030;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

<div
  class="emotion-0 denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test5a"
  />
</div>
`;

exports[`TextArea should render disabled dark theme 1`] = `
.emotion-0 {
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: column nowrap;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  position: relative;
  width: 250px;
}

.emotion-0>textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(242,242,242,0.1);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #fff;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: auto;
  line-height: 1.5;
  margin: 0;
  outline: none;
  padding: 0.25em 0.75rem;
  text-align: left;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  width: auto;
}

.emotion-0>textarea::-webkit-input-placeholder {
  color: rgba(255,255,255,0.2);
}

.emotion-0>textarea::-moz-placeholder {
  color: rgba(255,255,255,0.2);
}

.emotion-0>textarea:-ms-input-placeholder {
  color: rgba(255,255,255,0.2);
}

.emotion-0>textarea::placeholder {
  color: rgba(255,255,255,0.2);
}

.emotion-0>textarea:active,
.emotion-0>textarea:focus {
  background: rgba(242,242,242,0.1);
  border-bottom: 2px solid #3570f4;
  color: #fff;
}

.emotion-0>textarea:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-0>textarea[disabled] {
  background: rgba(255,255,255,0.1);
  border-bottom: 2px solid rgba(255,255,255,0.05);
  color: rgba(255,255,255,0.1);
  cursor: not-allowed;
}

.emotion-0 .message {
  font-size: 12px;
  color: #303030;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

<div
  class="emotion-0 denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    disabled=""
    name="test5b"
  />
</div>
`;

exports[`TextArea should render error state 1`] = `
.emotion-0 {
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: column nowrap;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  position: relative;
  width: 250px;
}

.emotion-0>textarea {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid #d01111;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: auto;
  line-height: 1.5;
  margin: 0;
  outline: none;
  padding: 0.25em 0.75rem;
  text-align: left;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  width: auto;
}

.emotion-0>textarea::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-0>textarea:active,
.emotion-0>textarea:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-0>textarea:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-0>textarea[disabled] {
  background: rgba(48,48,48,0.05);
  border-bottom: 2px solid rgba(48,48,48,0.05);
  color: rgba(48,48,48,0.25);
  cursor: not-allowed;
}

.emotion-0 .message {
  font-size: 12px;
  color: #d01111;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

<div
  class="emotion-0 denali-textarea"
  data-testid="textarea-wrapper"
>
  <textarea
    data-testid="textarea"
    name="test7"
  >
    This is an error
  </textarea>
</div>
`;
